[FIX] padding & align

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -25,7 +25,7 @@
     bottom: 0rem;
     right: 0rem;
     border-radius: 0;
-    display: flex;
-    justify-content: center;
+    padding: 0.6em;
+    text-align: center;
   }
 }
